--- a/book.tex
+++ b/book.tex
@@ -2,12 +2,12 @@
 \usepackage[space]{ctex}
 \usepackage{amsmath}
 \usepackage{times}
-\graphicspath{{/home/hpc/文档/Tensorflow/chapter1/}}
+\graphicspath{{/home/hpc/文档/Tensorflow/pic}}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pythonhighlight}
 \begin{document}
 \include{./chapter1/tf_chapter1}
-\include{./chapter1/tf_chapter2}
-\include{./chapter1/tf_api}
+\include{./chapter2/tf_chapter2}
+\include{./chapter3/tf_api}
 \end{document}
