增加部分argparser解析

--- a/book.tex
+++ b/book.tex
@@ -4,7 +4,7 @@
 \usepackage{times}
 \usepackage{titlesec}
 \usepackage{titlesec}
-\graphicspath{{./pic/chapter1}}
+\graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pythonhighlight}
@@ -27,5 +27,8 @@
 \newpage
 \include{./chapter1/tf_chapter1}
 \include{./chapter2/tf_chapter2}
-\include{./chapter3/tf_api}
+\include{./chapter2/use_gpu}
+\include{./chapter3/common_module}
+\include{./chapter4/tf_common}
+\include{./chapter4/tf_image}
 \end{document}
