--- a/x.tex
+++ b/x.tex
@@ -1,10 +1,6 @@
 \relax 
-\@writefile{toc}{\contentsline {chapter}{\numberline {2}Tensorflow进阶}{29}}
-\@writefile{lof}{\addvspace {10\p@ }}
-\@writefile{lot}{\addvspace {10\p@ }}
-\@writefile{toc}{\contentsline {section}{\numberline {2.1}模型存储和加载}{29}}
-\@setckpt{./chapter2/tf_chapter2}{
-\setcounter{page}{30}
+\@setckpt{./chapter/use_gpu}{
+\setcounter{page}{32}
 \setcounter{equation}{0}
 \setcounter{enumi}{2}
 \setcounter{enumii}{0}
@@ -14,7 +10,7 @@
 \setcounter{mpfootnote}{0}
 \setcounter{part}{0}
 \setcounter{chapter}{2}
-\setcounter{section}{1}
+\setcounter{section}{2}
 \setcounter{subsection}{0}
 \setcounter{subsubsection}{0}
 \setcounter{paragraph}{0}
