--- a/book.tex
+++ b/book.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pythonhighlight}
+\usepackage{caption}
+\usepackage{subfigure}
 \titleformat
 {\chapter} % command
 [display] % shape
