--- a/book.tex
+++ b/book.tex
@@ -31,6 +31,7 @@
 \include{./chapter2/tf_chapter2}
 \include{./chapter2/use_gpu}
 \include{./chapter3/common_module}
+\include{./chapter3/path}
 \include{./chapter4/tf_common}
 \include{./chapter4/tf_image}
 \end{document}
