add content of re module

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,5 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[11pt,fleqn]{book}
+\usepackage[top=3cm,bottom=3cm,left=3.2cm,right=3.2cm,headsep=10pt,letterpaper]{geometry}
 \usepackage[space]{ctex}
 \usepackage{amsmath}
 \usepackage{times}
@@ -10,28 +11,41 @@
 \usepackage{pythonhighlight}
 \usepackage{caption}
 \usepackage{subfigure}
-\titleformat
-{\chapter} % command
-[display] % shape
-{\bfseries\Large\itshape} % format
-{Tensorflow No. \ \thechapter} % label
-{0.5ex} % sep
-{\rule{\textwidth}{1pt}
-\vspace{1ex}
-\centering
-}
-[\vspace{-0.5ex}%
-\rule{\textwidth}{0.3pt}
-] % after-code
+\usepackage{longtable}
+\setlength{\arrayrulewidth}{1mm}
+%字体设置
+\usepackage{avant} % Use the Avantgarde font for headings
+%\usepackage{times} % Use the Times font for headings
+\usepackage{mathptmx} % Use the Adobe Times Roman as the default text font together with math symbols from the Sym­bol, Chancery and 
+%\titleformat
+%{\chapter} % command
+%[display] % shape
+%{\bfseries\Large\itshape} % format
+%{Tensorflow No. \ \thechapter} % label
+%{0.5ex} % sep
+%{\rule{\textwidth}{1pt}
+%\vspace{1ex}
+%\centering
+%}
+%[\vspace{-0.5ex}%
+%\rule{\textwidth}{0.3pt}
+%] % after-code
+%\begin{document}
+%\date{\today}
+%\tableofcontents
+%\newpage
 \begin{document}
-\date{\today}
-\tableofcontents
-\newpage
+\tableofcontents % Print the table of contents itself
+
 \include{./chapter1/tf_chapter1}
 \include{./chapter2/tf_chapter2}
 \include{./chapter2/use_gpu}
 \include{./chapter3/common_module}
 \include{./chapter3/path}
+\include{./chapter3/re}
+\include{./chapter3/sys}
+\include{./chapter3/url}
+\include{./chapter3/requests}
 \include{./chapter4/tf_common}
 \include{./chapter4/tf_image}
 \end{document}
