--- a/book.tex
+++ b/book.tex
@@ -13,6 +13,15 @@
 \usepackage{subfigure}
 \usepackage{longtable}
 \setlength{\arrayrulewidth}{1mm}
+\usepackage{hyperref}
+\usepackage{amsmath}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
+\urlstyle{same}
 %字体设置
 \usepackage{avant} % Use the Avantgarde font for headings
 %\usepackage{times} % Use the Times font for headings
