add new chapter performance

--- a/book.tex
+++ b/book.tex
@@ -53,6 +53,7 @@
 \include{./chapter1/tf_chapter1}
 \include{./chapter2/tf_chapter2}
 \include{./chapter2/use_gpu}
+\include{./chapter2/performance}
 \include{./chapter3/common_module}
 \include{./chapter3/path}
 \include{./chapter3/re}
