增加了忽略规则和layerapi函数说明

--- a/book.tex
+++ b/book.tex
@@ -62,4 +62,5 @@
 \include{./chapter3/bazel}
 \include{./chapter4/tf_common}
 \include{./chapter4/tf_image}
+\include{./chapter4/tf_layer}
 \end{document}
