增加优化器api

--- a/book.tex
+++ b/book.tex
@@ -49,8 +49,8 @@
 \mainmatter
 \lstset{numbers=left,numberstyle=\tiny,keywordstyle=\color{blue!70}, commentstyle=\color{red!50!green!50!blue!50},frame=shadowbox,rulesepcolor=\color{red!20!green!20!blue!20},escapeinside=``}
 \include{./chapter1/deeplearning}
-\include{./chapter1/tf_chapter1}
-\include{./chapter2/tf_chapter2}
+\include{./chapter1/tf_basics}
+\include{./chapter2/tf_advance}
 \include{./chapter2/use_gpu}
 \include{./chapter2/performance}
 \include{./chapter3/common_module}
@@ -60,7 +60,10 @@
 \include{./chapter3/url}
 \include{./chapter3/requests}
 \include{./chapter3/bazel}
+\include{./chapter4/tf_tricks}
 \include{./chapter4/tf_common}
 \include{./chapter4/tf_image}
 \include{./chapter4/tf_layer}
+\include{./chapter4/tf_train}
+
 \end{document}
