修改部分章节问题

--- a/book.tex
+++ b/book.tex
@@ -11,6 +11,7 @@
 \usepackage{subfiles}
 \usepackage{blindtext}
 \usepackage{listings}%设置C风格代码格式
+\usepackage{csquotes}%设置引用风格
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pythonhighlight}
@@ -51,7 +52,8 @@
 \include{./chapter1/deeplearning}
 \include{./chapter1/tf_basics}
 \include{./chapter2/tf_advance}
-\include{./chapter2/use_gpu}
+\include{./chapter2/tutorials}
+\include{./chapter2/extend}
 \include{./chapter2/performance}
 \include{./chapter3/common_module}
 \include{./chapter3/path}
