增加RNN部分说明

--- a/book.tex
+++ b/book.tex
@@ -59,6 +59,16 @@
 \include{./chapter3/path}
 \include{./chapter3/re}
 \include{./chapter3/sys}
+\include{./chapter3/datetime}
+\include{./chapter3/collections}
+\include{./chapter3/base64}
+\include{./chapter3/struct}
+\include{./chapter3/hashlib}
+\include{./chapter3/itertools}
+\include{./chapter3/contexlib}
+\include{./chapter3/XML}
+\include{./chapter3/HTMLParser}
+\include{./chapter3/ZipFile}
 \include{./chapter3/url}
 \include{./chapter3/requests}
 \include{./chapter3/bazel}
