分割基础部分

--- a/book.tex
+++ b/book.tex
@@ -50,7 +50,8 @@
 \mainmatter
 \lstset{numbers=left,numberstyle=\tiny,keywordstyle=\color{blue!70}, commentstyle=\color{red!50!green!50!blue!50},frame=shadowbox,rulesepcolor=\color{red!20!green!20!blue!20},escapeinside=``}
 \include{./chapter1/deeplearning}
-\include{./chapter1/tf_basics}
+\include{./chapter1/tf_basics1}
+\include{./chapter1/tf_basics2}
 \include{./chapter2/tf_advance}
 \include{./chapter2/tutorials}
 \include{./chapter2/extend}
