--- a/book.tex
+++ b/book.tex
@@ -53,6 +53,7 @@
 \include{./chapter1/tf_basics1}
 \include{./chapter1/Graph}
 \include{./chapter1/tf_dataset}
+\include{./chapter1/Treading}
 \include{./chapter1/tf_basics2}
 \include{./chapter2/tf_advance}
 \include{./chapter2/tutorials}
