--- a/book.tex
+++ b/book.tex
@@ -54,6 +54,7 @@
 \include{./chapter1/Graph}
 \include{./chapter1/tf_dataset}
 \include{./chapter1/Treading}
+\include{./chapter1/embedding}
 \include{./chapter1/tf_basics2}
 \include{./chapter2/tf_advance}
 \include{./chapter2/tutorials}
