添加变量相关说明

--- a/book.tex
+++ b/book.tex
@@ -79,6 +79,7 @@
 \include{./chapter3/bazel}
 \include{./chapter4/tf_tricks}
 \include{./chapter4/tf_common}
+\include{./chapter4/Variable}
 \include{./chapter4/tf_image}
 \include{./chapter4/tf_layer}
 \include{./chapter4/tf_train}
