添加部分监控说明

--- a/book.tex
+++ b/book.tex
@@ -48,7 +48,7 @@
 \frontmatter
 \tableofcontents % Print the table of contents itself
 \mainmatter
-\lstset{numbers=left,numberstyle=\tiny,keywordstyle=\color{blue!70}, commentstyle=\color{red!50!green!50!blue!50},frame=shadowbox,rulesepcolor=\color{red!20!green!20!blue!20},escapeinside=``}
+\lstset{breaklines=true,numbers=left,numberstyle=\tiny,keywordstyle=\color{blue!70}, commentstyle=\color{red!50!green!50!blue!50},frame=shadowbox,rulesepcolor=\color{red!20!green!20!blue!20},escapeinside=``}
 \include{./chapter1/deeplearning}
 \include{./chapter2/tf_basics1}
 \include{./chapter2/Graph}
