--- a/book.tex
+++ b/book.tex
@@ -81,6 +81,7 @@
 \include{./chapter4/tf_common}
 \include{./chapter4/Variable}
 \include{./chapter4/tf_image}
+\include{./chapter4/tf_feature}
 \include{./chapter4/tf_layer}
 \include{./chapter4/tf_train}
 
