添加CNN处理连续数据的代码

--- a/book.tex
+++ b/book.tex
@@ -8,7 +8,7 @@
 \usepackage{times}
 \usepackage{titlesec}
 %结构化
-\graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}}
+\graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}{./pic/example/}}
 \usepackage{subfiles}
 \usepackage{blindtext}
 \usepackage{listings}%设置C风格代码格式
@@ -84,12 +84,13 @@
 \include{./chapter3/url}
 \include{./chapter3/requests}
 \include{./chapter3/bazel}
-\include{./chapter4/tf_tricks}
-\include{./chapter4/tf_common}
-\include{./chapter4/Variable}
-\include{./chapter4/tf_image}
-\include{./chapter4/tf_feature}
-\include{./chapter4/tf_layer}
-\include{./chapter4/tf_train}
+\include{./Practice/practice}
+\include{./API/tf_tricks}
+\include{./API/tf_common}
+\include{./API/Variable}
+\include{./API/tf_image}
+\include{./API/tf_feature}
+\include{./API/tf_layer}
+\include{./API/tf_train}
 
 \end{document}
