--- a/Practice/practice.tex
+++ b/Practice/practice.tex
@@ -26,3 +26,12 @@
 \lstinputlisting[language=Python]{./code/har/utilities.py}
 神经网络实现模块:
 \lstinputlisting[language=Python]{./code/har/cnn_har.py}
+\subsection{LSTM处理序列数据}
+LSTM架构如下:
+\begin{figure}[H]
+	\includegraphics[scale=0.5]{HAR_lstm.png}
+	\caption{lstm架构图}
+\end{figure}
+\lstinputlisting[language=Python]{./code/har/lstm_har.py}
+
+
