--- a/book.tex
+++ b/book.tex
@@ -57,7 +57,7 @@
 \mainmatter
 \lstset{breaklines=true,numbers=left,numberstyle=\tiny,keywordstyle=\color{blue!70}, commentstyle=\color{red!50!green!50!blue!50},frame=shadowbox,rulesepcolor=\color{red!20!green!20!blue!20},escapeinside=``}
 \include{./chapter1/deeplearning}
-\include{./chapter2/tf_basics1}
+\include{./chapter2/variable}
 \include{./chapter2/Graph}
 \include{./chapter2/tf_dataset}
 \include{./chapter2/Treading}
